--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -22,6 +22,8 @@ header {
         color: inherit;
         text-decoration: none;
         font-weight: lighter;
+        text-wrap: nowrap;
+
         &:active {
             color: inherit;
             text-decoration: none;
@@ -64,6 +66,66 @@ header {
                     text-decoration: inherit;
                 }
             }
+
         }
+        
+        div.nav-toggle {
+            display: none;
+        }
+
+        @media screen and (max-width: 750px) {
+            div.nav-items {
+                display: none;
+                position: fixed;
+                left: 0;
+                top: calc(3.5em - 2px);
+                right: 0;
+                flex-direction: row;
+                flex-wrap: wrap;
+                background-color: white;
+                height: auto;
+                border-bottom: 2px solid #ddd;
+                padding: 0 .5em;
+                box-sizing: border-box;
+
+                &.nav-items-active {
+                    display: flex;
+                }
+
+                a {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                    padding: .3em;
+
+                    span {
+                        display: block;
+                        margin: .5em 0;
+                        box-sizing: border-box;
+                        padding: .5em 1em;
+                        background-color: #444;
+                        color: white;
+                    }
+                }
+            }
+
+            div.nav-toggle {
+                display: flex;
+                height: 100%;
+                flex-direction: row;
+                align-items: center;
+                padding: 0 1em;
+                cursor: pointer;
+                user-select: none;
+            }
+            div.nav-toggle:hover {
+                background-color: #f1f1f1;
+            }
+        }
+    }
+
+    @media screen and (max-width: 750px) {
+        padding: 0 1em;
     }
 }
